fix navbar jump effect

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -42,3 +42,6 @@
   content: '\00B7';
   @apply ml-2 mr-2;
 }
+article {
+  scroll-padding-top: 100px;
+}
